@@ -1,9 +1,8 @@
 package it.polimi.ingsw.utils;
 
+import java.util.*;
 import it.polimi.ingsw.exceptions.CardException;
 import it.polimi.ingsw.gamemodel.*;
-
-import java.util.*;
 
 
 public class TUICardPrinter {
@@ -12,7 +11,7 @@ public class TUICardPrinter {
     Map<Integer, GoldCard> goldCards;
     Map<Integer, ResourceCard> resourceCards;
 
-    public TUICardPrinter(){
+    public TUICardPrinter() {
         CardsManager cardsManager = CardsManager.getInstance();
 
         initialCards = cardsManager.getInitialCards();
@@ -22,8 +21,18 @@ public class TUICardPrinter {
 
     }
 
-    // TBA JAVADOC
 
+    /**
+     * Generates a {@link PlayableCard} as a string to be printed
+     * 
+     * @param id the card id
+     * @param coord where to place the card (relative to the terminal, not {@link Board})
+     * @param isFacingUp wheter the card is facing up or down
+     * 
+     * @returns the string representing the card
+     * 
+     * @throws CardException if the card type is not known
+     */
     public String getCardString(int id, Pair<Integer, Integer> coord, Boolean isFacingUp) throws CardException {
         if (resourceCards.get(id) != null)
             return parseCard(resourceCards.get(id), coord, isFacingUp);
@@ -33,6 +42,17 @@ public class TUICardPrinter {
         throw new CardException("Invalid card type: " + initialCards.get(id).getClass() + "or" + objectives.get(id).getClass() + "!");
     }
 
+    /**
+     * Generates a {@link InitialCard} as a string to be printed
+     * 
+     * @param id the card id
+     * @param coord where to place the card (relative to the terminal, not {@link Board})
+     * @param isFacingUp wheter the card is facing up or down
+     * 
+     * @returns the string representing the card
+     * 
+     * @throws CardException if the card type is not known
+     */
     public String getInitialString(int id, Pair<Integer, Integer> coord, Boolean isFacingUp) throws CardException {
         if (initialCards.get(id) == null)
             throw new CardException("Invalid card type!");
@@ -40,6 +60,16 @@ public class TUICardPrinter {
         return parseCard(initialCards.get(id), coord, isFacingUp);
     }
 
+    /**
+     * Generates a {@link Objective} as a string to be printed
+     * 
+     * @param id the card id
+     * @param coord where to place the card (relative to the terminal, not {@link Board})
+     * 
+     * @returns the string representing the card
+     * 
+     * @throws CardException if the card type is not known
+     */
     public String getObjectiveString(int id, Pair<Integer, Integer> coord) throws CardException {
         if (objectives.get(id) == null)
             throw new CardException("Invalid card type!");
@@ -50,7 +80,6 @@ public class TUICardPrinter {
     // NO JAVADOC
 
     // PARSERS
-
     private String parseCard(Card card, Pair<Integer, Integer> coord, Boolean isFacingUp) throws CardException {
 
         // acquire information
@@ -62,27 +91,28 @@ public class TUICardPrinter {
 
         String cardColor;
         switch (card) {
-            case InitialCard initialCard        -> cardColor = "\033[0m";
-            case GoldCard goldCard              -> cardColor = getRightColor(goldCard.getReign());
-            case ResourceCard resourceCard      -> cardColor = getRightColor(resourceCard.getReign());
-            default                             -> throw new CardException("Invalid card type: " + card.getClass() + "!");
+            case InitialCard initialCard -> cardColor = "\033[0m";
+            case GoldCard goldCard -> cardColor = getRightColor(goldCard.getReign());
+            case ResourceCard resourceCard -> cardColor = getRightColor(resourceCard.getReign());
+            default -> throw new CardException("Invalid card type: " + card.getClass() + "!");
         }
+
 
         // process information
         Map<Corner, List<String>> cornersAsString = new HashMap<>();
-        processCorners(cornersAsString, cornersToProcess, coord);
+        processCorners(cornersAsString, cornersToProcess, coord, cardColor);
 
         Map<Integer, String> centerAsString = new HashMap<>();
         switch (card) {
-            case InitialCard initialCard        -> processCenter(centerAsString, centerToProcess, initialCard);
-            case GoldCard goldCard              -> processCenter(centerAsString, centerToProcess, goldCard);
-            case ResourceCard resourceCard      -> processCenter(centerAsString, centerToProcess, resourceCard);
-            default                             -> throw new CardException("Invalid card type: " + card.getClass() + "!");
+            case InitialCard initialCard -> processCenter(centerAsString, centerToProcess, initialCard);
+            case GoldCard goldCard -> processCenter(centerAsString, centerToProcess, goldCard);
+            case ResourceCard resourceCard -> processCenter(centerAsString, centerToProcess, resourceCard);
+            default -> throw new CardException("Invalid card type: " + card.getClass() + "!");
         }
 
         // assemble the string
-        String tripleBrackets = "\"\"\"", newLine = "\n";
-        StringBuilder printableCard = new StringBuilder(tripleBrackets + newLine).append(cardColor).append(newLine);
+        String newLine = "\n";
+        StringBuilder printableCard = new StringBuilder(cardColor).append(newLine);
         assembleCard(printableCard, cornersAsString, centerAsString); // if it doesn't work, use the safe version assembleCardSafe
         printableCard.append(newLine);
 
@@ -90,7 +120,7 @@ public class TUICardPrinter {
         return printableCard.toString();
     }
 
-    private String parseObjective(Objective card, Pair<Integer, Integer> coord){
+    private String parseObjective(Objective card, Pair<Integer, Integer> coord) {
 
         // process information
         Map<Corner, List<String>> cornersAsString = new HashMap<>();
@@ -100,8 +130,8 @@ public class TUICardPrinter {
         processObjectiveCenter(centerAsString, card);
 
         // assemble the string
-        String tripleBrackets = "\"\"\"", newLine = "\n", cardColor = "\033[0m";
-        StringBuilder printableCard = new StringBuilder(tripleBrackets + newLine).append(cardColor).append(newLine);
+        String newLine = "\n", cardColor = "\033[0m";
+        StringBuilder printableCard = new StringBuilder(cardColor).append(newLine);
         assembleCard(printableCard, cornersAsString, centerAsString); // if it doesn't work, use the safe version assembleCardSafe
         printableCard.append(newLine);
 
@@ -110,10 +140,10 @@ public class TUICardPrinter {
     }
 
 
-    // ASSEMBLERS
+    // ASSEMBLERERS
 
     // cool algorithmic version
-    private void assembleCard(StringBuilder printableCard, Map<Corner, List<String>> cornersAsString, Map<Integer, String> centerAsString){
+    private void assembleCard(StringBuilder printableCard, Map<Corner, List<String>> cornersAsString, Map<Integer, String> centerAsString) {
 
         List<Corner> left = new ArrayList<>(), right = new ArrayList<>();
         left.add(Corner.TOP_LEFT);
@@ -122,7 +152,7 @@ public class TUICardPrinter {
         right.add(Corner.BOTTOM_RIGHT);
 
         int i, j, k;
-        for(i = 0; i < 6; i++){
+        for (i = 0; i < 6; i++) {
             j = (i <= 2) ? 0 : 1;
             k = i % 3;
 
@@ -134,7 +164,8 @@ public class TUICardPrinter {
     }
 
     // boring safe version
-    private void assembleCardSafe(StringBuilder printableCard, Map<Corner, List<String>> cornersAsString, Map<Integer, String> centerAsString){
+    private void assembleCardSafe(StringBuilder printableCard, Map<Corner, List<String>> cornersAsString,
+            Map<Integer, String> centerAsString) {
         printableCard.append(cornersAsString.get(Corner.TOP_LEFT).get(0));
         printableCard.append(centerAsString.get(0));
         printableCard.append(cornersAsString.get(Corner.TOP_RIGHT).get(0));
@@ -180,7 +211,7 @@ public class TUICardPrinter {
         }
     }
 
-    private void acquireCenterSymbols(Set<Symbol> centerToProcess, Card card, Boolean isFacingUp){
+    private void acquireCenterSymbols(Set<Symbol> centerToProcess, Card card, Boolean isFacingUp) {
         Side side = (isFacingUp) ? Side.FRONT : Side.BACK;
         centerToProcess.addAll(card.getSide(side).getCenter());
     }
@@ -188,7 +219,8 @@ public class TUICardPrinter {
 
     // PROCESSERS
 
-    private void processCorners(Map<Corner, List<String>> cornersAsString, Map<Corner, Symbol> cornersToProcess, Pair<Integer, Integer> coord){
+    private void processCorners(Map<Corner, List<String>> cornersAsString, Map<Corner, Symbol> cornersToProcess,
+            Pair<Integer, Integer> coord, String borderColor) {
 
         List<String> singleCorner;
         String suffix;
@@ -196,25 +228,25 @@ public class TUICardPrinter {
         for (Corner corner : cornersToProcess.keySet()) {
             singleCorner = new ArrayList<>();
 
-            switch (corner){
+            switch (corner) {
                 case Corner.TOP_LEFT:
                     suffix = "";
-                    singleCorner.addAll(getTopLeftCorner(coord, cornersToProcess.get(corner), suffix));
+                    singleCorner.addAll(getTopLeftCorner(coord, cornersToProcess.get(corner), suffix, borderColor));
                     break;
 
                 case Corner.TOP_RIGHT:
                     suffix = "\n";
-                    singleCorner.addAll(getTopRightCorner(coord, cornersToProcess.get(corner), suffix));
+                    singleCorner.addAll(getTopRightCorner(coord, cornersToProcess.get(corner), suffix, borderColor));
                     break;
 
                 case Corner.BOTTOM_LEFT:
                     suffix = "";
-                    singleCorner.addAll(getBottomLeftCorner(coord, cornersToProcess.get(corner), suffix));
+                    singleCorner.addAll(getBottomLeftCorner(coord, cornersToProcess.get(corner), suffix, borderColor));
                     break;
 
                 case Corner.BOTTOM_RIGHT:
                     suffix = "\n";
-                    singleCorner.addAll(getBottomRightCorner(coord, cornersToProcess.get(corner), suffix));
+                    singleCorner.addAll(getBottomRightCorner(coord, cornersToProcess.get(corner), suffix, borderColor));
                     break;
 
                 default:
@@ -228,103 +260,111 @@ public class TUICardPrinter {
     // only considers cases of goldcards with 1 or 2 different symbols as placement requirement
     private void processCenter(Map<Integer, String> centerAsString, Set<Symbol> centerToProcess, GoldCard card) {
 
-        centerAsString.put(1, "────────");
-        centerAsString.put(4, "        ");
-        centerAsString.put(6, "────────");
+        centerAsString.put(0, "────────");
+        centerAsString.put(3, "        ");
+        centerAsString.put(5, "────────");
 
         String colorReset = getRightColor(card.getReign());
 
-        if (centerToProcess.isEmpty()){
-            centerAsString.put(3, "        ");
-            centerAsString.put(2, "   " + getRightColor(card.getMultiplier()) + String.valueOf(card.getPoints()) + getRightIcon(card.getMultiplier()) + colorReset + "   ");
+        if (centerToProcess.isEmpty()) {
+            centerAsString.put(2, "        ");
+            centerAsString.put(1, "   " + getRightColor(card.getMultiplier()) + String.valueOf(card.getPoints())
+                    + getRightIcon(card.getMultiplier()) + colorReset + "   ");
 
             String space = (card.getRequirement().getReqs().size() == 1) ? "   " : "  ";
-            centerAsString.put(5, space + getQuantityString(card.getRequirement().getReqs()) + space);
+            centerAsString.put(4, space + getQuantityString(card.getRequirement().getReqs(), colorReset) + space);
 
             return;
         }
 
-        centerAsString.put(2, "        ");
-        centerAsString.put(3, "   " + getRightColor(card.getReign()) + "1" + getRightIcon(card.getReign()) + "   "); // back
-        centerAsString.put(5, "        ");
+        centerAsString.put(1, "        ");
+        centerAsString.put(2, "   " + getRightColor(card.getReign()) + "1" + getRightIcon(card.getReign()) + "   "); // back
+        centerAsString.put(4, "        ");
     }
 
     private void processCenter(Map<Integer, String> centerAsString, Set<Symbol> centerToProcess, ResourceCard card) {
-        centerAsString.put(1, "────────");
+        centerAsString.put(0, "────────");
+        centerAsString.put(3, "        ");
         centerAsString.put(4, "        ");
-        centerAsString.put(5, "        ");
-        centerAsString.put(6, "────────");
+        centerAsString.put(5, "────────");
 
-        if (centerToProcess.isEmpty()){
-            if (card.getPoints() == 0) { centerAsString.put(2, "        "); }
-            else { centerAsString.put(2, "   " + String.valueOf(card.getPoints()) + "    "); }
+        if (centerToProcess.isEmpty()) {
+            if (card.getPoints() == 0) {
+                centerAsString.put(1, "        ");
+            } else {
+                centerAsString.put(1, "   " + String.valueOf(card.getPoints()) + "    ");
+            }
 
-            centerAsString.put(3, "        ");
+            centerAsString.put(2, "        ");
             return;
         }
 
-        centerAsString.put(2, "        ");
-        centerAsString.put(3, "   " + getRightColor(card.getReign()) + "1" + getRightIcon(card.getReign()) + "   "); // back
+        centerAsString.put(1, "        ");
+        centerAsString.put(2, "   " + getRightColor(card.getReign()) + "1" + getRightIcon(card.getReign()) + "   "); // back
     }
 
     private void processCenter(Map<Integer, String> centerAsString, Set<Symbol> centerToProcess, InitialCard card) {
-        centerAsString.put(1, "────────");
-        centerAsString.put(2, "        ");
-        centerAsString.put(5, "        ");
-        centerAsString.put(6, "────────");
+        String colorReset = "\033[0m";
+
+        centerAsString.put(0, colorReset + "────────");
+        centerAsString.put(1, colorReset + "        ");
+        centerAsString.put(4, colorReset + "        ");
+        centerAsString.put(5, colorReset + "────────");
 
         if (centerToProcess.isEmpty()) {
-            centerAsString.put(3, "   ╔╗   ");
-            centerAsString.put(4, "   ╚╝   ");
+            centerAsString.put(2, colorReset + "   ╔╗   ");
+            centerAsString.put(3, colorReset + "   ╚╝   ");
             return;
         }
 
-        String colorReset = "\033[0m";
         Symbol[] symbols = centerToProcess.toArray(new Symbol[0]);
 
-        centerAsString.put(3, "   " + getRightColor(symbols[0]) + "1" + getRightIcon(symbols[0]) + colorReset + "   ");
-        switch (centerToProcess.size()){
+        centerAsString.put(2, "   " + getRightColor(symbols[0]) + "1" + getRightIcon(symbols[0]) + colorReset + "   ");
+        switch (centerToProcess.size()) {
             case 1:
-                centerAsString.put(4, "        ");
+                centerAsString.put(3, "        ");
                 break;
             case 2:
-                centerAsString.put(4, "   " + getRightColor(symbols[1]) + "1" + getRightIcon(symbols[1]) + colorReset + "   ");
+                centerAsString.put(3, "   " + getRightColor(symbols[1]) + "1" + getRightIcon(symbols[1]) + colorReset + "   ");
                 break;
             case 3:
-                centerAsString.put(4, "  " + getRightColor(symbols[1]) + "1" + getRightIcon(symbols[1]) +
-                        getRightColor(symbols[2]) + "1" + getRightIcon(symbols[2]) + colorReset + "  ");
+                centerAsString.put(3, "  " + getRightColor(symbols[1]) + "1" + getRightIcon(symbols[1]) + getRightColor(symbols[2]) + "1"
+                        + getRightIcon(symbols[2]) + colorReset + "  ");
                 break;
             default:
                 break;
         }
     }
 
-    private void processObjectiveCorners(Map<Corner, List<String>> cornersAsString, Pair<Integer, Integer> coord){
+    private void processObjectiveCorners(Map<Corner, List<String>> cornersAsString, Pair<Integer, Integer> coord) {
         String leftSuffix = "", rightSuffix = "\n";
         Symbol symbol = Symbol.EMPTY_CORNER;
 
-        cornersAsString.put(Corner.TOP_LEFT, getTopLeftCorner(coord, symbol, leftSuffix));
-        cornersAsString.put(Corner.TOP_RIGHT, getTopLeftCorner(coord, symbol, rightSuffix));
-        cornersAsString.put(Corner.BOTTOM_LEFT, getTopLeftCorner(coord, symbol, leftSuffix));
-        cornersAsString.put(Corner.BOTTOM_RIGHT, getTopLeftCorner(coord, symbol, rightSuffix));
+        cornersAsString.put(Corner.TOP_LEFT, getTopLeftCorner(coord, symbol, leftSuffix, "\033[0m"));
+        cornersAsString.put(Corner.TOP_RIGHT, getTopRightCorner(coord, symbol, rightSuffix, "\033[0m"));
+        cornersAsString.put(Corner.BOTTOM_LEFT, getBottomLeftCorner(coord, symbol, leftSuffix, "\033[0m"));
+        cornersAsString.put(Corner.BOTTOM_RIGHT, getBottomRightCorner(coord, symbol, rightSuffix, "\033[0m"));
     }
 
-    private void processObjectiveCenter(Map<Integer, String> centerAsString, Objective objective){
 
-        centerAsString.put(1, "────────");
-        centerAsString.put(2, "   " + String.valueOf(objective.getPoints()) + "    ");
-        centerAsString.put(6, "────────");
+    private void processObjectiveCenter(Map<Integer, String> centerAsString, Objective objective) {
 
-        switch (objective.getReq()){
+        centerAsString.put(0, "────────");
+        centerAsString.put(1, "   " + String.valueOf(objective.getPoints()) + "    ");
+        centerAsString.put(5, "────────");
+
+        switch (objective.getReq()) {
             case PositionRequirement positionRequirement:
                 getPositioningString(centerAsString, positioningClassifier(positionRequirement.getReqs()));
                 break;
             case QuantityRequirement quantityRequirement:
-                centerAsString.put(3, "        ");
-                centerAsString.put(5, "        ");
-                String space = (quantityRequirement.getReqs().size() == 2) ? "  " : " ";
-                centerAsString.put(4, space + getQuantityString(quantityRequirement.getReqs()) + space);
-                break;
+                centerAsString.put(2, "        ");
+                centerAsString.put(4, "        ");
+                String space = getObjectiveSpace(quantityRequirement);
+                if (space != null) {
+                    centerAsString.put(3, space + getQuantityString(quantityRequirement.getReqs(), "\033[0m") + space);
+                    break;
+                }
             default:
                 throw new IllegalStateException("Unexpected value: " + objective.getReq());
         }
@@ -332,22 +372,22 @@ public class TUICardPrinter {
 
     }
 
-    //GETTERS
+    // GETTERS
 
-    private String getQuantityString(Map<Symbol, Integer> reqs) {
+    private String getQuantityString(Map<Symbol, Integer> reqs, String borderColor) {
 
         StringBuilder reqString = new StringBuilder();
 
         for (Symbol symbol : reqs.keySet())
-            reqString.append(getRightColor(symbol)).append(String.valueOf(reqs.get(symbol))).append(getRightIcon(symbol));
+            reqString.append(getRightColor(symbol)).append(String.valueOf(reqs.get(symbol))).append(getRightIcon(symbol))
+                    .append(borderColor);
 
         return reqString.toString();
 
     }
 
-    private String getPrefixCoord(Pair<Integer, Integer> coord, int linePosition){
-        int x = coord.first(),
-                y = coord.second();
+    private String getPrefixCoord(Pair<Integer, Integer> coord, int linePosition) {
+        int x = coord.first(), y = coord.second();
 
         return switch (linePosition) {
             case 1 -> "\033[" + String.valueOf(y) + ";" + String.valueOf(x) + "H";
@@ -367,29 +407,28 @@ public class TUICardPrinter {
 
     private String getRightColor(Symbol symbol) {
         return switch (symbol) {
-            case     FUNGUS                         -> "\033[31m";
-            case     ANIMAL                         -> "\033[36m";
-            case     PLANT                          -> "\033[32m";
-            case     INSECT                         -> "\033[35m";
-            case     INKWELL, PARCHMENT, FEATHER    -> "\033[33m";
-            default                                 -> "";
+            case FUNGUS -> "\033[31m";
+            case ANIMAL -> "\033[36m";
+            case PLANT -> "\033[32m";
+            case INSECT -> "\033[35m";
+            case INKWELL, PARCHMENT, FEATHER -> "\033[33m";
+            default -> "";
         };
     }
 
     private String getRightIcon(Symbol symbol) {
         return switch (symbol) {
-            case     FULL_CORNER, EMPTY_CORNER      -> " ";
-            case     FUNGUS, ANIMAL, PLANT, INSECT  -> "■";
-            case     INKWELL                        -> "I";
-            case     PARCHMENT                      -> "P";
-            case     FEATHER                        -> "F";
-            case     CORNER_OBJ                     -> "◳";
-            default                                 -> " ";
+            case FULL_CORNER, EMPTY_CORNER -> " ";
+            case FUNGUS, ANIMAL, PLANT, INSECT -> "■";
+            case INKWELL -> "I";
+            case PARCHMENT -> "P";
+            case FEATHER -> "F";
+            case CORNER_OBJ -> "◳";
+            default -> " ";
         };
     }
 
-    private List<String> getTopLeftCorner(Pair<Integer, Integer> coord, Symbol symbol, String suffix){
-
+    private List<String> getTopLeftCorner(Pair<Integer, Integer> coord, Symbol symbol, String suffix, String borderColor) {
         List<String> corner = new ArrayList<>();
 
         switch (symbol) {
@@ -401,7 +440,7 @@ public class TUICardPrinter {
 
             default:
                 corner.add(getPrefixCoord(coord, 1) + "┌───┬" + suffix);
-                corner.add(getPrefixCoord(coord, 2) + "│ " + getColorAndIcon(symbol) + " │" + suffix);
+                corner.add(getPrefixCoord(coord, 2) + "│ " + getColorAndIcon(symbol) + borderColor + " │" + suffix);
                 corner.add(getPrefixCoord(coord, 3) + "├───┘" + suffix);
                 break;
         }
@@ -409,28 +448,28 @@ public class TUICardPrinter {
         return corner;
     }
 
-    private List<String> getTopRightCorner(Pair<Integer, Integer> coord, Symbol symbol, String suffix){
+    private List<String> getTopRightCorner(Pair<Integer, Integer> coord, Symbol symbol, String suffix, String borderColor) {
 
         List<String> corner = new ArrayList<>();
 
         switch (symbol) {
             case Symbol.EMPTY_CORNER:
-                corner.add(getPrefixCoord(coord, 1) + "────┐" + suffix);
-                corner.add(getPrefixCoord(coord, 2) + "    │" + suffix);
-                corner.add(getPrefixCoord(coord, 3) + "    │" + suffix);
+                corner.add("────┐" + suffix);
+                corner.add("    │" + suffix);
+                corner.add("    │" + suffix);
                 break;
 
             default:
-                corner.add(getPrefixCoord(coord, 1) + "┬───┐" + suffix);
-                corner.add(getPrefixCoord(coord, 2) + "│ " + getColorAndIcon(symbol) + " │" + suffix);
-                corner.add(getPrefixCoord(coord, 3) + "└───┤" + suffix);
+                corner.add("┬───┐" + suffix);
+                corner.add("│ " + getColorAndIcon(symbol) + borderColor + " │" + suffix);
+                corner.add("└───┤" + suffix);
                 break;
         }
 
         return corner;
     }
 
-    private List<String> getBottomLeftCorner(Pair<Integer, Integer> coord, Symbol symbol, String suffix){
+    private List<String> getBottomLeftCorner(Pair<Integer, Integer> coord, Symbol symbol, String suffix, String borderColor) {
 
         List<String> corner = new ArrayList<>();
 
@@ -443,7 +482,7 @@ public class TUICardPrinter {
 
             default:
                 corner.add(getPrefixCoord(coord, 4) + "├───┐" + suffix);
-                corner.add(getPrefixCoord(coord, 5) + "│ " + getColorAndIcon(symbol) + " │" + suffix);
+                corner.add(getPrefixCoord(coord, 5) + "│ " + getColorAndIcon(symbol) + borderColor + " │" + suffix);
                 corner.add(getPrefixCoord(coord, 6) + "└───┴" + suffix);
                 break;
         }
@@ -451,91 +490,88 @@ public class TUICardPrinter {
         return corner;
     }
 
-    private List<String> getBottomRightCorner(Pair<Integer, Integer> coord, Symbol symbol, String suffix){
+    private List<String> getBottomRightCorner(Pair<Integer, Integer> coord, Symbol symbol, String suffix, String borderColor) {
 
         List<String> corner = new ArrayList<>();
 
         switch (symbol) {
             case Symbol.EMPTY_CORNER:
-                corner.add(getPrefixCoord(coord, 4) + "    │" + suffix);
-                corner.add(getPrefixCoord(coord, 5) + "    │" + suffix);
-                corner.add(getPrefixCoord(coord, 6) + "────┘" + suffix);
+                corner.add("    │" + suffix);
+                corner.add("    │" + suffix);
+                corner.add("────┘" + suffix);
                 break;
 
             default:
-                corner.add(getPrefixCoord(coord, 4) + "┌───┤" + suffix);
-                corner.add(getPrefixCoord(coord, 5) + "│ " + getColorAndIcon(symbol) + " │" + suffix);
-                corner.add(getPrefixCoord(coord, 6) + "┴───┘" + suffix);
+                corner.add("┌───┤" + suffix);
+                corner.add("│ " + getColorAndIcon(symbol) + borderColor + " │" + suffix);
+                corner.add("┴───┘" + suffix);
                 break;
         }
 
         return corner;
     }
 
-    private String getPosixIcon(Symbol symbol){
+    private String getPosixIcon(Symbol symbol) {
 
         String icon = "▆▆", suffix = "\033[0m";
 
-        return switch (symbol){
-            case     FUNGUS   -> "\033[31m" + icon + suffix;
-            case     ANIMAL   -> "\033[36m" + icon + suffix;
-            case     PLANT    -> "\033[32m" + icon + suffix;
-            case     INSECT   -> "\033[35m" + icon + suffix;
-            default           ->  icon + suffix;
+        return switch (symbol) {
+            case FUNGUS -> "\033[31m" + icon + suffix;
+            case ANIMAL -> "\033[36m" + icon + suffix;
+            case PLANT -> "\033[32m" + icon + suffix;
+            case INSECT -> "\033[35m" + icon + suffix;
+            default -> icon + suffix;
         };
 
 
     }
 
-    private void getPositioningString(Map<Integer, String> cornersAsString, Pair<Positioning, List<Symbol>> positioning){
+    private void getPositioningString(Map<Integer, String> cornersAsString, Pair<Positioning, List<Symbol>> positioning) {
 
-        switch (positioning.first()){
-
+        switch (positioning.first()) {
             case DIAGONAL_LF:
-                cornersAsString.put(5, getPosixIcon(positioning.second().getFirst()) + "      ");
+                cornersAsString.put(4, getPosixIcon(positioning.second().get(0)) + "      ");
                 break;
             case DIAGONAL_RG:
-                cornersAsString.put(3, getPosixIcon(positioning.second().getFirst()) + "      ");
-                cornersAsString.put(4, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
-                cornersAsString.put(5, "      " + getPosixIcon(positioning.second().getFirst()));
+                cornersAsString.put(2, getPosixIcon(positioning.second().get(0)) + "      ");
+                cornersAsString.put(3, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
+                cornersAsString.put(4, "      " + getPosixIcon(positioning.second().get(0)));
                 break;
             case DIAG_VERT_LF:
-                cornersAsString.put(3, "      " + getPosixIcon(positioning.second().get(1)));
-                cornersAsString.put(4, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
-                cornersAsString.put(5, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
+                cornersAsString.put(2, "      " + getPosixIcon(positioning.second().get(1)));
+                cornersAsString.put(3, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
+                cornersAsString.put(4, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
                 break;
             case DIAG_VERT_RG:
-                cornersAsString.put(3, getPosixIcon(positioning.second().get(1)) + "      ");
-                cornersAsString.put(4, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
-                cornersAsString.put(5, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
+                cornersAsString.put(2, getPosixIcon(positioning.second().get(1)) + "      ");
+                cornersAsString.put(3, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
+                cornersAsString.put(4, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
                 break;
             case VERT_DIAG_LF:
-                cornersAsString.put(3, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
-                cornersAsString.put(4, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
-                cornersAsString.put(5, getPosixIcon(positioning.second().get(1)) + "      ");
+                cornersAsString.put(2, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
+                cornersAsString.put(3, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
+                cornersAsString.put(4, getPosixIcon(positioning.second().get(1)) + "      ");
                 break;
             case VERT_DIAG_RG:
-                cornersAsString.put(3, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
-                cornersAsString.put(4, "   " + getPosixIcon(positioning.second().getFirst()) + "   ");
-                cornersAsString.put(5, "      " + getPosixIcon(positioning.second().get(1)));
+                cornersAsString.put(2, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
+                cornersAsString.put(3, "   " + getPosixIcon(positioning.second().get(0)) + "   ");
+                cornersAsString.put(4, "      " + getPosixIcon(positioning.second().get(1)));
                 break;
             default:
                 break;
-
         }
-
     }
 
 
     // UTILS
-
-    private void coordSorter(List<Pair<Integer, Integer>> coordList){
+    private void coordSorter(List<Pair<Integer, Integer>> coordList) {
 
         // comparator sorts by the second element of the pair, in descending order
         Comparator<Pair<Integer, Integer>> comparator = new Comparator<Pair<Integer, Integer>>() {
             @Override
             public int compare(Pair<Integer, Integer> p1, Pair<Integer, Integer> p2) {
-                // ret a negative / zero / positive int as the first argument is less / equal / greater than the second
+                // ret a negative / zero / positive int as the first argument is less / equal / greater than the
+                // second
                 return Integer.compare(p2.second(), p1.second());
             }
         };
@@ -544,27 +580,25 @@ public class TUICardPrinter {
 
     }
 
-    private Boolean doesItGoVertical(Pair<Integer, Integer> upper, Pair<Integer, Integer> lower){
+    private Boolean doesItGoVertical(Pair<Integer, Integer> upper, Pair<Integer, Integer> lower) {
 
         int upperY = upper.second(), lowerY = lower.second();
 
         return (upperY == lowerY + 2);
     }
 
-    private Pair<Positioning, List<Symbol>> positioningClassifier(Map<Pair<Integer, Integer>, Symbol> posix){
+    private Pair<Positioning, List<Symbol>> positioningClassifier(Map<Pair<Integer, Integer>, Symbol> posix) {
 
         // sort coordinates
         List<Pair<Integer, Integer>> coordList = new ArrayList<>(posix.keySet());
         coordSorter(coordList);
 
-        Pair<Integer, Integer> first = coordList.get(0),
-                second = coordList.get(1),
-                third = coordList.get(2);
+        Pair<Integer, Integer> first = coordList.get(0), second = coordList.get(1), third = coordList.get(2);
 
         // check
-        if (doesItGoVertical(first, second)){
+        if (doesItGoVertical(first, second)) {
 
-            if (third.first() == second.first() + 1){
+            if (third.first() == second.first() + 1) {
                 Positioning positioning = Positioning.VERT_DIAG_RG;
                 List<Symbol> symbolList = new ArrayList<>();
                 symbolList.add(posix.get(first));
@@ -581,9 +615,9 @@ public class TUICardPrinter {
             }
         }
 
-        if (doesItGoVertical(second, third)){
+        if (doesItGoVertical(second, third)) {
 
-            if (second.first() == first.first() + 1){
+            if (second.first() == first.first() + 1) {
                 Positioning positioning = Positioning.DIAG_VERT_RG;
                 List<Symbol> symbolList = new ArrayList<>();
                 symbolList.add(posix.get(second));
@@ -600,7 +634,7 @@ public class TUICardPrinter {
             }
         }
 
-        if (second.first() == first.first() + 1){
+        if (second.first() == first.first() + 1) {
             Positioning positioning = Positioning.DIAGONAL_RG;
             List<Symbol> symbolList = new ArrayList<>();
             symbolList.add(posix.get(first));
@@ -612,9 +646,22 @@ public class TUICardPrinter {
         List<Symbol> symbolList = new ArrayList<>();
         symbolList.add(posix.get(first));
         return new Pair<>(positioning, symbolList);
-        //}
+        // }
 
     }
 
+    private String getObjectiveSpace(QuantityRequirement reqs) {
+        switch (reqs.getReqs().size()) {
+            case 1:
+                return "   ";
+            case 2:
+                return "  ";
+            case 3:
+                return " ";
+
+            default:
+                return null;
+        }
+    }
 
 }
